Fixed usage of Integer class.